# real_time_inflation

./: .env.example  .gitignore  CLAUDE.md  inflation-tracker-plan.md  pyproject.toml
.claude/agents/: code-reviewer.md  devops-reviewer.md  methodology-reviewer.md  security-reviewer.md
.github/workflows/: compute.yml  fuel.yml  scrape.yml
alerting/: base.py  console.py  telegram.py
config/: category_urls.yaml  stores.yaml
db/migrations/: 0001_init_schema.sql  0002_widen_hicp_weight_precision.sql  README.md  (+4 more)
docs/: france-expansion-plan.md  future-roadmap.md  germany-expansion-plan.md  system-overview.md  us-expansion-plan.md
fuel/: README.md  db.py  dgeg.py  run.py
metrics/: category_compute.py  compute.py  formulas.py
scraper/: antibot.py  auchan.py  auchan_category.py  auchan_france.py  base.py  category_base.py  continente.py  continente_category.py  db.py  lidl_france.py  models.py  pingodoce.py  pingodoce_category.py  run.py  runner_common.py  store_config.py  wegmans.py
seed/: README.md  categories.py  listings.csv  load_seed.py  products.csv  stores.py
tests/: fake_supabase.py  test_antibot.py  test_auchan_france_parsing.py  test_auchan_parsing.py  test_bls.py  test_category_compute.py  test_compute.py  test_continente_parsing.py  test_db_upsert.py  test_dgeg_parsing.py  test_eurostat.py  test_fuel_db.py  test_lidl_france_parsing.py  test_metrics_formulas.py  test_pingodoce_parsing.py  test_scraper_base.py  test_seed_load.py  test_seed_stores.py  test_store_config.py  test_telegram.py  test_wegmans_parsing.py
web/: README.md  next.config.ts  package-lock.json  package.json
weights/: bls.py  eurostat.py
(+29 files in other folders)
