[project]
name = "real-time-inflation"
version = "0.1.0"
description = "Portugal real-time grocery inflation tracker — scraper, weights fetcher, seed loader"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "httpx>=0.27",
    "supabase>=2.5",
    "tenacity>=8.2",
    "selectolax>=0.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
