[project]
name = "real-time-inflation"
version = "0.1.0"
description = "Portugal real-time grocery inflation tracker — scraper, weights fetcher, seed loader"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45",
    "httpx>=0.27",
    "supabase>=2.5",
    "tenacity>=8.2",
    "selectolax>=0.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120  # generous on purpose: this project's established style leans on long,
# explanatory prose comments (module/function docstrings recording live-verification
# findings, disclosed simplifications, etc.) — fighting that with the default 88 would
# flag most of the codebase's most valuable comments, not real problems.
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
